@@ -149,6 +149,7 @@
  *               white background (DG); 
  * 19-Mar-2008 : Fixed IllegalArgumentException when drawing with null 
  *               dataset (DG);
+ * 31-Mar-2008 : Adjust the label area for the interiorGap (DG);
  *    
  */
 
@@ -2630,7 +2631,8 @@ public class PiePlot extends Plot implements Cloneable, Serializable {
         
         // calculate the max label width from the plot dimensions, because
         // a circular pie can leave a lot more room for labels...
-        double marginX = plotArea.getX() + this.interiorGap * plotArea.getWidth();
+        double marginX = plotArea.getX() + this.interiorGap 
+                * plotArea.getWidth();
         double gap = plotArea.getWidth() * this.labelGap;
         double ww = linkArea.getX() - gap - marginX;
         float labelWidth = (float) this.labelPadding.trimWidth(ww);
@@ -2690,8 +2692,10 @@ public class PiePlot extends Plot implements Cloneable, Serializable {
                         + getExplodePercent(leftKeys.getKey(i))));
             }
         }
-        this.labelDistributor.distributeLabels(plotArea.getMinY(), 
-                plotArea.getHeight());
+        double hh = plotArea.getHeight();
+        double gap = hh * getInteriorGap();
+        this.labelDistributor.distributeLabels(plotArea.getMinY() + gap, 
+                hh - 2 * gap);
         for (int i = 0; i < this.labelDistributor.getItemCount(); i++) {
             drawLeftLabel(g2, state, 
                     this.labelDistributor.getPieLabelRecord(i));
@@ -2741,8 +2745,10 @@ public class PiePlot extends Plot implements Cloneable, Serializable {
                         0.9 + getExplodePercent(keys.getKey(i))));
             }
         }
-        this.labelDistributor.distributeLabels(plotArea.getMinY(), 
-                plotArea.getHeight());
+        double hh = plotArea.getHeight();
+        double gap = hh * getInteriorGap();
+        this.labelDistributor.distributeLabels(plotArea.getMinY() + gap, 
+                hh - 2 * gap);
         for (int i = 0; i < this.labelDistributor.getItemCount(); i++) {
             drawRightLabel(g2, state, 
                     this.labelDistributor.getPieLabelRecord(i));
