@@ -1,5 +1,11 @@
 2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/plot/PiePlot.java
+    (drawLeftLabels): Adjust label area for interiorGap,
+    (drawRightLabels): Likewise.
+
+2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/labels/HighLowItemLabelGenerator.java:
     (hashCode): Implemented,
     * source/org/jfree/chart/labels/MultipleXYSeriesLabelGenerator.java: 
